# cxx_library_template

./: CMakeLists.txt  README.md
cmake/: classes_to_sources.cmake
include/rul/: object_a.hpp  object_b.hpp
scripts/: check.sh
src/: CMakeLists.txt  object_b.cpp
tests/: CMakeLists.txt  test_object_a.cpp
